--- a/index.html
+++ b/index.html
@@ -20,41 +20,50 @@
           This is not real online service! You know you need something like this in your life to help you realize your
           deepest dreams. Sign up <span>now</span> to get started.
         </h2>
-        <h2>
+        <h2 class="minorText">
           You
           <span>know</span>
-          you want to
+          you want to.
         </h2>
         <form>
           <fieldset>
             <h2 class="formTitle">Let's do this!</h2>
             <div class="inputs">
-              <div class="firstInputColumn">
+              <div class="inputColumn">
                 <div class="input">
-                  <label>First name</label>
-                  <input type="text" />
+                  <label for="firstName">First name</label>
+                  <input type="text" id="firstName" name="firstName" required />
                 </div>
                 <div class="input">
-                  <label>Email</label>
-                  <input type="text" />
+                  <label for="email">Email</label>
+                  <input type="email" id="email" name="email" required />
                 </div>
                 <div class="input">
-                  <label>Password</label>
-                  <input type="text" />
+                  <label for="password">Password</label>
+                  <input
+                    type="password"
+                    id="password"
+                    name="password"
+                    pattern="(?=.*\d).{6,}"
+                    title="Please enter a password that has at least 6 characters and 1 digit"
+                    minlength="6"
+                    onChange="onChange()"
+                    required
+                  />
                 </div>
               </div>
-              <div class="secondInputColumn">
+              <div class="inputColumn">
                 <div class="input">
-                  <label>Last name</label>
-                  <input type="text" />
+                  <label for="lastName">Last name</label>
+                  <input type="text" id="lastName" name="lastName" required />
                 </div>
                 <div class="input">
-                  <label>Phone number</label>
-                  <input type="text" />
+                  <label for="phone">Phone number</label>
+                  <input type="text" id="phone" name="phone" minlength="9" maxlength="9" placeholder="123456789" />
                 </div>
                 <div class="input">
-                  <label>Confirm password</label>
-                  <input type="text" />
+                  <label for="repeatPassword">Confirm password</label>
+                  <input type="password" id="repeatPassword" name="repeatPassword" onChange="onChange()" required />
                 </div>
               </div>
             </div>
